# dictator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
loop-engineering/specs/: 15-07-2026-open-source-hardening.md
loop-engineering/verify/: 15-07-2026-1-repository-foundation.md  15-07-2026-2-session-lifecycle.md  15-07-2026-3-native-runtime.md  15-07-2026-4-open-source-bundle.md  15-07-2026-5-installed-smoke.md  15-07-2026-6-dictator-release.md
packaging/: Info.plist  com.local.dictator.plist.in  com.local.whisper-dictate.plist.in  launcher.c
scripts/: bootstrap.sh  build-app.sh  generate-icon.sh  install.sh  uninstall.sh
src/dictator/: __init__.py  audio.py  config.py  controller.py  diagnostics.py  errors.py  hotkey.py  hud.py  inserter.py  main.py  state.py  transcriber.py
src/whisper_dictate/: __init__.py  audio.py  config.py  controller.py  diagnostics.py  errors.py  hotkey.py  inserter.py  main.py  ports.py  state.py  transcriber.py
tests/unit/: test_audio.py  test_config.py  test_controller.py  test_diagnostics.py  test_inserter.py  test_state.py  test_transcriber.py
