[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Private, local push-to-talk dictation for Apple Silicon Macs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Matthew Byers" }]
keywords = ["dictation", "macos", "mlx", "whisper", "speech-to-text"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
macos = [
  "mlx==0.31.2",
  "mlx-whisper==0.4.3",
  "numpy==2.4.6",
  "pynput==1.8.2",
  "pyobjc-framework-ApplicationServices==12.2",
  "pyobjc-framework-Cocoa==12.2",
  "pyobjc-framework-Quartz==12.2",
  "sounddevice==0.5.5",
]
dev = ["coverage==7.10.6", "ruff==0.12.8"]

[project.scripts]
whisper-dictate = "whisper_dictate.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["whisper_dictate"]
omit = ["src/whisper_dictate/main.py", "src/whisper_dictate/hud.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
